# pyqubo

./: .coveragerc  .gitignore  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  banchmark_tsp.py  codecov.yml  install.ps1  pyproject.toml  requirements.txt  requirements_doctest.txt  requirements_rtd.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_upolad.yaml  ci-test.yml  codeql-analysis.yml  test.yml
benchmark/: .gitignore  benchmark.py  benchmark_tsp.py  requirements.txt  run.sh  test_run.sh
cpp_dimod/: .CMakeLists.txt  CMakeLists.txt  Doxyfile  binary_quadratic_model.hpp  hash.hpp  vartypes.hpp
cpp_dimod/test/: test.cpp
docs/: Makefile  conf.py  getting_started.rst  index.rst  make.bat
docs/_static/: theme_overrides.css
docs/notebooks/: getting_started.ipynb
docs/reference/: array.rst  constraint.rst  express.rst  func.rst  integer.rst  logic.rst  model.rst  tensor.rst  utils.rst  varset.rst
docs/reference/internal/: binaryprod.rst  coefficient.rst  compiledconstraint.rst  compiledqubo.rst  index.rst  paramprod.rst  placeholderprod.rst
include/: CMakeLists.txt  array_index.h  coeff.h  coeffprod.h  compiled_penalty.h  compiled_qubo.h  compiled_sub_h.h  decoded_solution.h  encoder.h  expanded.h  express.h  linkedlist.h  model.h  placeholderpoly.h  poly.h  prod.h  pybase.h  utils.h
notebooks/: TSP.ipynb  graph_coloring.ipynb  graph_partition.ipynb  integer_partition.ipynb  knapsack.ipynb  multiplier.ipynb  pyqubo_linear.eps
notebooks/ja/: graph_coloring_ja.ipynb
notebooks/japanese/: TSP.ipynb  graph_coloring.ipynb  graph_partition.ipynb  integer_partition.ipynb
pyqubo/: __init__.py  array.py  constrained_integer.py  constraint.py  func.py  integer.py  logic.py  logical_constraint.py  order_enc_integer.py  package_info.py  tensor.py  varset.py
pyqubo/core/: __init__.py  binaryprod.py  coefficient.py  compiled_constraint.py  compiled_qubo.py  express.py  model.py  paramprod.py  placeholderprod.py
pyqubo/integer/: __init__.py  integer.py  log_encoded_integer.py  one_hot_enc_integer.py  order_enc_integer.py  unary_encoded_integer.py
pyqubo/utils/: __init__.py  asserts.py  solver.py
src/: CMakeLists.txt  abstract_syntax_tree.hpp  coeff.cpp  compiler.hpp  compiler2.hpp  encoder.cpp  expand.hpp  expanded.cpp  express.cpp  main.cpp  model.hpp  placeholderpoly.cpp  poly.cpp  poly.hpp  product.hpp  pybind_mapping.cpp  reduce_order.cpp  test.cpp  variables.hpp
test/: __init__.py  test_array.py  test_asserts.py  test_binaryprod.py  test_coefficient.py  test_constraint.py  test_express_compile.py  test_express_equality.py  test_integer.py  test_logic.py  test_model.py  test_paramprod.py  test_placeholderprod.py  test_solver.py  test_subh.py  test_varset.py
tests/: CMakeLists.txt  _test_constraint.py  _test_main.py  pyqubotest.cpp  test_array.py  test_constraint.py  test_express.py  test_integer.py  test_logical_constraint.py  test_model.py
