[build-system]
requires = [
    'cmake>=3.20.5',
    'pip>=19.3',
    'setuptools>=57.1.0',
    'wheel>=0.36.2',
    'build>=0.5.1',
    "ninja; sys_platform != 'win32' and platform_machine != 'arm64'",
    'numpy>=1.17.3, <=1.20.0',
    'Cython>=0.29.24', 
]
build-backend = "setuptools.build_meta"
